--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   max-width: 400px;
   margin: 20px auto;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #fffcfc;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
